--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+# LOCALE
 
+spring.web.locale-resolver=fixed
+spring.web.locale=pt_BR
+
+# MySQL Database Connection Properties
+spring.datasource.driveClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/PotterTravel_Api?useSSL=false&allowPubliclyRetrieval=true&serverTimeZone=America/Sao_Paulo
+spring.datasource.username=root
+spring.datasource.password=Dorgas100!
+
+# JPA
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.hibernate.ddl-auto=update
+
+
+spring.jpa.open-in-view=false
