--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.web.locale-resolver=fixed
 spring.web.locale=pt_BR
 
 # MySQL Database Connection Properties
-spring.datasource.driveClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/PotterTravel_Api?createDatabaseIfNotExist=true&useSSL=false&allowPubliclyRetrieval=true&serverTimeZone=America/Sao_Paulo
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=Dorgas100!
 
 # JPA
 spring.jpa.show-sql=true
