--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.web.locale=pt_BR
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/PotterTravel_Api?createDatabaseIfNotExist=true&useSSL=false&allowPubliclyRetrieval=true&serverTimeZone=America/Sao_Paulo
 spring.datasource.username=root
-spring.datasource.password=Dorgas100!
+spring.datasource.password=123456
 
 # JPA
 spring.jpa.show-sql=true
